// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`addMember 1`] = `
Array [
  Object {
    "id": "bot",
    "name": "Bot",
  },
  Object {
    "id": "user",
    "name": "User",
  },
  Object {
    "id": "user-1",
    "name": "User 1",
  },
]
`;

exports[`removeMember 1`] = `
Array [
  Object {
    "id": "bot",
    "name": "Bot",
  },
]
`;

exports[`updateActivity success 1`] = `
Array [
  Object {
    "activity": Object {
      "id": "123",
      "ten": 10,
      "three": 3,
      "twenty": 20,
    },
    "watermark": 0,
  },
]
`;
